# playerstats-football-analytics

./: .gitignore  .replit  DEPLOY.md  README.md  STREAMLIT_GUIDE.md  package-lock.json  package.json  public  pyproject.toml  replit.md  streamlit_app.py  tailwind.config.ts
attached_assets/: Pasted--fbref-report-py-from-soccerdata-import-FBref-import-pandas-as-pd-import-pdfkit-import-os--1750779664458_1750779664462.txt  Pasted-import-React-useState-useEffect-from-react-import-data-from-data-players-data-2024-202-1751394409830_1751394409833.txt  Pasted-import-streamlit-as-st-import-pandas-as-pd-import-matplotlib-pyplot-as-plt-import-seaborn-as-sns--1751387763963_1751387763964.txt
client/src/: App.tsx  index.css  main.tsx
client/src/components/: AutoPlayerComparison.tsx  BasicAutoComparison.tsx  EnhancedHeatmap.tsx  Footer.tsx  Header.tsx  Heatmap.tsx  PassMap.tsx  PlayerCard.tsx  PlayerComparison.tsx  ScoutingReport.tsx  (+3 more)
server/: routes.ts  storage.ts
server/python/: enhanced_player_analyzer.py  fbref_report_generator.py  soccerdata_collector.py
server/services/: aggressiveFbrefMatcher.ts  aiService.ts  comparisonService.ts  csvDirectAnalyzer.ts  csvMatchAnalyzer.ts  csvPlayerAnalyzer.ts  enhancedReportService.ts  enhancedSoccerDataService.ts  fbrApi.ts  fbrefEnhancer.ts  fbrefScraper.ts  footballApi.ts  heatmapService.ts  optimizedTransfermarktApi.ts  pdfPlayerCard.ts  pdfReportGenerator.ts  playerSimilarityService.ts  rateLimitManager.ts  scraper.ts  smartStatsCollector.ts  soccerDataService.ts  transfermarktApi.ts  weaknessAnalysisService.ts
shared/: schema.ts
(+14 files in other folders)
