[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "html5lib>=1.1",
    "lxml>=4.9.4",
    "matplotlib>=3.10.3",
    "mplsoccer>=1.5.0",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "requests>=2.32.4",
    "seaborn>=0.13.2",
    "soccerdata>=1.8.7",
]
